--- a/src/index.html
+++ b/src/index.html
@@ -10,31 +10,37 @@
 
       <div class="buscador" id="buscador">
         <img src="Daco_5394286.png" class="im2">
+        <br>
+        <select class="in1" id="in1"> 
+          <option value="value1">  A-Z  </option>
+          <option value="value2">  Z-A  </option>
+        </select>
+
+        <br> 
+        
+        <button class="btn btn-header" id="ver-todos">Ver todos</button> 
+        <button class="btn Normal" id="normal">Normal</button>
+        <button class="btn Fire" id="fire">Fire</button>
+        <button class="btn Water" id="water">Water</button>
+        <button class="btn Grass" id="grass">Grass</button>
+        <button class="btn Electric" id="electric">Electric</button>
+        <button class="btn Ice" id="ice">Ice</button>
+        <button class="btn Fighting" id="fighting">Fighting</button>
+        <button class="btn Poison" id="poison">Poison</button>
+        <button class="btn Ground" id="ground">Ground</button>
+        <button class="btn Flying" id="flying">Flying</button>
+        <button class="btn Psychic" id="psychic">Psychic</button>
+        <button class="btn Bug" id="bug">Bug</button>
+        <button class="btn Rock" id="rock">Rock</button>
+        <button class="btn Ghost" id="ghost">Ghost</button>
+        <button class="btn Dark" id="dark">Dark</button>
+        <button class="btn Dragon" id="dragon">Dragon</button>
+        <button class="btn Steel" id="steel">Steel</button>
+        <button class="btn Fairy" id="fairy">Fairy</button>
         <img src="Pokemon-Ash-PNG-HD.png" class="im1" >
         
-        <li class="nav-item"><button class="btn btn-header" id="ver-todos">Ver todos</button></li> 
-        <li class="nav-item"><button class="btn btn-header normal" id="normal">Normal</button></li>
-        <li class="nav-item"><button class="btn btn-header fire" id="fire">Fire</button></li>
-        <li class="nav-item"><button class="btn btn-header water" id="water">Water</button></li>
-        <li class="nav-item"><button class="btn btn-header grass" id="grass">Grass</button></li>
-        <li class="nav-item"><button class="btn btn-header electric" id="electric">Electric</button></li>
-        <li class="nav-item"><button class="btn btn-header ice" id="ice">Ice</button></li>
-        <li class="nav-item"><button class="btn btn-header fighting" id="fighting">Fighting</button></li>
-        <li class="nav-item"><button class="btn btn-header poison" id="poison">Poison</button></li>
-        <li class="nav-item"><button class="btn btn-header ground" id="ground">Ground</button></li>
-        <li class="nav-item"><button class="btn btn-header flying" id="flying">Flying</button></li>
-        <li class="nav-item"><button class="btn btn-header psychic" id="psychic">Psychic</button></li>
-        <li class="nav-item"><button class="btn btn-header bug" id="bug">Bug</button></li>
-        <li class="nav-item"><button class="btn btn-header rock" id="rock">Rock</button></li>
-        <li class="nav-item"><button class="btn btn-header ghost" id="ghost">Ghost</button></li>
-        <li class="nav-item"><button class="btn btn-header dark" id="dark">Dark</button></li>
-        <li class="nav-item"><button class="btn btn-header dragon" id="dragon">Dragon</button></li>
-        <li class="nav-item"><button class="btn btn-header steel" id="steel">Steel</button></li>
-        <li class="nav-item"><button class="btn btn-header fairy" id="fairy">Fairy</button></li>
-        </ul>
-        </nav>
-
       </div>
+      <div class="navegacion"></div>
       <div class="targets" id="targets"> 
       </div> 
     </div>
