--- a/src/index.html
+++ b/src/index.html
@@ -11,10 +11,14 @@
       <div class="buscador" id="buscador">
         <img src="Daco_5394286.png" class="im2">
         <br>
-        <select class="in1" id="in1"> 
-          <option value="value1">  A-Z  </option>
-          <option value="value2">  Z-A  </option>
-        </select>
+      <select class="in1" id="Tipopokemon"></select>
+
+      <select class="in1" id="in1">
+        <option value="">Ordenar Alfabeticamente </option>
+        <option value="asc"> A-Z </option>
+        <option value="desc"> Z-A </option>
+      </select>
+
 
         <br> 
         
@@ -41,8 +45,7 @@
         
       </div>
       <div class="navegacion"></div>
-      <div class="targets" id="targets"> 
-      </div> 
+      <div class="targets" id="targets"> </div> 
     </div>
     <script src="main.js" type="module"></script>
 
