--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
         <img src="Pokemon-Ash-PNG-HD.png" class="im1" >
         
       </div>
+      <span></span>
 
       <div class="navegacion">__</div>
       <div class="flip" >
